I still need to work on the mobile version

--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,9 @@
   place-items: center;
   padding: 67px 165px;
 }
+
+@media screen and (max-width: 1000px) {
+  .App {
+    padding: 40px 20px;
+  }
+}
