--- a/src/utilities.css
+++ b/src/utilities.css
@@ -33,19 +33,15 @@
   line-height: 24px;
 }
 
+.prm {
+  font-family: atk;
+  font-size: 26px;
+  line-height: 32px;
+}
+
 .body {
   font-family: atk;
   font-size: 18px;
-}
-
-.number-6x6 {
-  font-family: atk;
-  font-size: 44px;
-}
-
-.number-4x4 {
-  font-family: atk;
-  font-size: 56px;
 }
 
 .primary-button,
@@ -73,4 +69,33 @@
 .secondary-button:hover {
   background: var(--light-blue);
   color: var(--white);
+}
+
+@media screen and (max-width: 1000px) {
+  .h2 {
+    font-size: 24px;
+    line-height: 30px;
+  }
+
+  .body {
+    font-size: 15px;
+    line-height: 19px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .prm {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .h2 {
+    font-size: 18px;
+    line-height: 22px;
+  }
+
+  .h3 {
+    font-size: 15px;
+    line-height: 18px;
+  }
 }
