--- a/src/utilities.css
+++ b/src/utilities.css
@@ -84,6 +84,11 @@
 }
 
 @media screen and (max-width: 500px) {
+  .h1 {
+    font-size: 24px;
+    line-height: 30px;
+  }
+
   .prm {
     font-size: 16px;
     line-height: 20px;
